--- a/index.html
+++ b/index.html
@@ -26,5 +26,33 @@
                 <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
             </div>
         </header>
+
+        <main>
+            <section class="section-about">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        Exciting tours for adventurous people
+                    </h2>
+                </div>
+                    <div class="row">
+                        <div class="col-1-of-2">
+                            <h3 class="heading-terciary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                            <p class="paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eius repellendus modi nemo. Consectetur officia fuga a perferendis sit ex rerum laudantium ipsa libero? Vero quis eaque velit odit qui.
+                            </p>
+                            <h3 class="heading-terciary u-margin-bottom-small">Live adventures like you never have before</h3>
+                            <p class="paragraph">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur cumque harum laboriosam.
+                            </p>
+                            <a href="#" class="btn-text">
+                                Learn more &rarr;
+                            </a>
+                        </div>
+                        <div class="col-1-of-2">
+                            column 2
+                        </div>
+                    </div>
+            </section>
+        </main>
     </body>
 </html>
