--- a/index.html
+++ b/index.html
@@ -198,6 +198,48 @@
                     <a href="#" class="btn btn--green btn--animated">Discover all tours</a>
                 </div>
             </section>
+
+            <section class="section-stories">
+                <div class="bg-video">
+                    <video class="bg-video__content" autoplay muted loop>
+                        <source src="img/video.mp4" type="video/mp4">
+                        <source src="img/video.webm" type="video/webm">
+                        Your browser is not supported!    
+                    </video>
+                </div>
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        We make people genuinely happy 
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img class="story__img" src="img/nat-8.jpg" alt="Person on a tour">
+                            <figcaption class="story__caption">Mary Smith</figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-terciary u-margin-bottom-small">I had the best week ever with my family</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nihil ad temporibus, assumenda sed hic, odio illum rerum iusto earum autem officia adipisci ea nobisautem officia adipisci autem officia adipisci ea nobisautem officia adipisci ea nobis  ea nobisautem officia adipisci ea nobis.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img class="story__img" src="img/nat-9.jpg" alt="Person on a tour">
+                            <figcaption class="story__caption">Jack Wilson</figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-terciary u-margin-bottom-small">Amazing trip!</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nihil ad temporibus, assumenda sed hic, odio illum rerum iusto earum autem officia adipisci ea nobisautem officia adipisci autem officia adipisci ea nobisautem officia adipisci ea nobis  ea nobisautem officia adipisci ea nobis.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="u-center-text u-margin-top-huge">
+                    <a href="#" class="btn-text">Read all stories &rarr;</a>
+                </div>
+            </section>
         </main>
     </body>
 </html>
